Fixed spacing on mobile

--- a/gardeners/static-assets/css/style.css
+++ b/gardeners/static-assets/css/style.css
@@ -97,6 +97,15 @@ section { overflow: hidden; }
     padding-bottom: 40px;
 }
 
+.roomy-80-s {
+}
+
+@media only screen and (max-width: 990px) {
+    .roomy-80-s {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+}
 
 /*text color*/
 
